--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-auth-session": "~4.0.3",
     "expo-crypto": "~12.2.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.21.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-reanimated": "~2.14.4",
